LibraryProject | DAOJPA | WS | REST | STUB | Created the DaoJPA Project and refactored other projects for its integration
